# 2D_incompressible_flow_solver

./: README.md  README.md~  runtimes~
Current/: CMakeCache.txt  CMakeLists.txt  Makefile  TestDerivative1_L:1_W:1.txt  TestDerivative1_nx:200_ny:200.vti  TestPoissonGRS_tol:1e-10_SOR:0.6_L:1_W:1.txt  TestPoissonGRS_tol:1e-10_SOR:1.2_L:1_W:1.txt  Untitled Document~  cmake_install.cmake  makefile~  testVtk.cpp~
Current/Documentation/: Conclusion.tex  Intro.tex  Methods.tex  Results.tex  abstract.tex  appendix.tex  latex_plots.txt  latex_plots.txt~  ovs_sd.eepic  ovs_sd.emtex  plot.tex  refs.bib  refs.bib~  thesis.aux  thesis.bbl  thesis.blg  thesis.dvi  thesis.out  thesis.ps  thesis.tex  thesis.thm  thesis.toc
Current/Results/: cfl_u.gp  cfl_u.gp~  cfl_v.gp  cfl_v.gp~  gnuplots  grs_u_100.gp  grs_u_100.gp~  grs_u_1000.gp  grs_u_1000.gp~  grs_v_100.gp  grs_v_100.gp~  grs_v_1000.gp  grs_v_1000.gp~  lit_u_100.gp  lit_u_100.gp~  lit_u_1000.gp  lit_u_1000.gp~  lit_u_100_2.gp  lit_u_100_2.gp~  lit_v_100.gp  lit_v_100.gp~  lit_v_1000.gp  lit_v_1000.gp~  ovs_sd.gp  rfs.gp  rfs.gp~  rta.gp  rta.gp~  rts.gp  rts.gp~
Current/old/: GridRefinementStudy_L:1_W:1Tol:1e-06.txt  GridRefinementStudy_L:1_W:1Tol:1e-09.txt  GridRefinementStudy_L:1_W:1Tol:1e-12.txt  GridRefinementStudy_L:1_W:1_Tol:1e-06.txt  GridRefinementStudy_L:1_W:1_Tol:1e-09.txt  (+2 more)
old/: FCFD.cbp  main.c  main.cc  main.cpp
without_VTK/: makefile  readme.txt
without_VTK/sources/: CMakeLists.txt  Grid.cpp  Grid.h  GridRefinementStudy.cpp  GridRefinementStudy.h  Main.cpp  Makefile  cmake_install.cmake
(+6023 files in other folders)
